A Brand New Structure of Our Project Many New Functions By Leo

--- a/src/com/leoli/Files/Accomendation Notice.html
+++ b/src/com/leoli/Files/Accomendation Notice.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Dormitory Agreement</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9fbfd;
+            color: #2c3e50;
+            line-height: 1.7;
+            margin: 0;
+            padding: 40px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container {
+            width: 75vw; /* 每行宽度为屏幕的 75% */
+            max-width: 900px; /* 防止在超宽屏上过宽 */
+        }
+        h1 {
+            text-align: center;
+            font-size: 2.0em;
+            margin-bottom: 24px;
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+        }
+        .preamble {
+            text-align: center;
+            margin-bottom: 25px;
+            color: #555;
+            font-style: italic;
+            font-size: 1.05em;
+        }
+        ol {
+            padding-left: 1.8em;
+            margin-bottom: 30px;
+        }
+        li {
+            margin-bottom: 16px;
+            background-color: #ffffff;
+            padding: 12px 16px;
+            border-radius: 6px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+        }
+        .signature-section {
+            text-align: center;
+            font-style: italic;
+            color: #7f8c8d;
+            margin-bottom: 20px;
+        }
+        .signatures {
+            margin-top: 10px;
+        }
+        .signatures p {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #95a5a6;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+
+<div class="container">
+    <h1>Dormitory Agreement</h1>
+
+    <p class="preamble">
+        We, the residents of this dorm room, agree to follow the rules below to maintain a peaceful, clean, and respectful shared living space.
+    </p>
+
+    <ol>
+        <li>Treat all roommates with kindness, respect, and empathy at all times.</li>
+        <li>Respect each other’s personal space, privacy, and belongings—never use or move someone else’s items without permission.</li>
+        <li>Communicate openly and address concerns directly, calmly, and respectfully.</li>
+        <li>Keep your own area tidy and free of clutter, including bed, desk, and storage.</li>
+        <li>Participate fairly in cleaning common areas (floor, bathroom, sink, etc.) according to an agreed-upon schedule.</li>
+        <li>Wash your dishes immediately after use and never leave them in the sink overnight.</li>
+        <li>Take out the trash when it’s full or when it’s your turn, and replace the bag afterward.</li>
+        <li>Observe quiet hours from 10:00 PM to 8:00 AM on weekdays and from 12:00 AM to 10:00 AM on weekends.</li>
+        <li>Use headphones when listening to music, watching videos, or playing games during quiet hours or when others are sleeping.</li>
+        <li>Avoid loud talking, phone calls, or noisy activities late at night or early in the morning.</li>
+        <li>Always inform all roommates in advance before inviting any guest to the room.</li>
+        <li>Guests may not stay overnight without unanimous agreement from all roommates.</li>
+        <li>You are fully responsible for your guest’s behavior and any mess they create.</li>
+        <li>Clean shared appliances (microwave, fridge, kettle, etc.) immediately after using them.</li>
+        <li>Do not hoard food or personal items in common spaces like the fridge or shelves.</li>
+        <li>Contribute fairly to shared supplies such as toilet paper, soap, cleaning products, and trash bags.</li>
+        <li>Never share door codes, keys, or access cards with anyone outside the room.</li>
+        <li>Lock the door when leaving, even for a short time, to ensure everyone’s safety.</li>
+        <li>Report maintenance issues (leaks, broken lights, etc.) to housing staff promptly.</li>
+        <li>No smoking, vaping, drugs, alcohol (if prohibited by policy), or illegal activities in the dorm.</li>
+        <li>If you break something communal, take responsibility and help replace or repair it.</li>
+        <li>Be mindful of electricity and water usage—turn off lights, AC, and taps when not needed.</li>
+    </ol>
+
+    <div class="signature-section">
+        By signing below, we pledge to uphold this agreement and support one another as considerate roommates.
+    </div>
+
+    <div class="signatures">
+        <p>Date: _________________________</p>
+        <p>Signature: _________________________ &nbsp;&nbsp; Name: _______________</p>
+        <p>Signature: _________________________ &nbsp;&nbsp; Name: _______________</p>
+        <p>Signature: _________________________ &nbsp;&nbsp; Name: _______________</p>
+        <p>Signature: _________________________ &nbsp;&nbsp; Name: _______________</p>
+    </div>
+
+    <footer>
+        This Dormitory Agreement is effective upon signature by all residents.
+    </footer>
+</div>
 
 </body>
 </html>
